update mod info & description

--- a/1.0.0/manifest.json
+++ b/1.0.0/manifest.json
@@ -1,8 +1,8 @@
 {
     "polymod": {
-        "name": "Cinema",
+        "name": "PolyCinema",
         "id": "cinema",
-        "author": "HeroHunterr; Jakob",
+        "author": "Hero, Jakob",
         "targets": ["0.5.2"],
         "main": "main.mod.js"
     },
