--- a/1.0.0/manifest.json
+++ b/1.0.0/manifest.json
@@ -3,8 +3,15 @@
         "name": "PolyCinema",
         "id": "cinema",
         "author": "Hero, Jakob",
-        "targets": ["0.5.2"],
+        "targets": [
+            "0.5.2"
+        ],
         "main": "main.mod.js"
     },
-    "dependencies": []
+    "dependencies": [
+        {
+            "id": "polyprocessing",
+            "version": "2.0.1"
+        }
+    ]
 }
